<?xml version="1.0"?>
<package>
  <name>yd_record</name>
  <version>0.0.1</version>
  <description>The yd_record package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

<build_depend>nodelet</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>

<run_depend>nodelet</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>

  <export>
  </export>
</package>
